--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "term_paper"}]
 python = "^3.9"
 python-dotenv = "^1.0.0"
 sqlalchemy = "^2.0.7"
+requests = "^2.28.2"
 
 
 [tool.poetry.group.dev.dependencies]
