--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9"
 python-dotenv = "^1.0.0"
 sqlalchemy = "^2.0.7"
 requests = "^2.28.2"
+dpath = "^2.1.5"
 
 
 [tool.poetry.group.dev.dependencies]
