--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,15 @@ python-dotenv = "^1.0.0"
 sqlalchemy = "^2.0.7"
 requests = "^2.28.2"
 dpath = "^2.1.5"
+tqdm = "^4.65.0"
+xmltodict = "^0.13.0"
 
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.2"
 flake8 = "^6.0.0"
 pylance = "^0.3.18"
+ipykernel = "^6.22.0"
 
 [build-system]
 requires = ["poetry-core"]
