--- a/wiki-clean/package.json
+++ b/wiki-clean/package.json
@@ -11,7 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "sqlite3": "^5.1.6",
     "wtf_wikipedia": "^10.1.3"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17"
   }
 }
