--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requests = "^2.28.2"
 dpath = "^2.1.5"
 tqdm = "^4.65.0"
 xmltodict = "^0.13.0"
+nltk = "^3.8.1"
 
 
 [tool.poetry.group.dev.dependencies]
