--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dpath = "^2.1.5"
 tqdm = "^4.65.0"
 xmltodict = "^0.13.0"
 nltk = "^3.8.1"
+matplotlib = "^3.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
