--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ tqdm = "^4.65.0"
 xmltodict = "^0.13.0"
 nltk = "^3.8.1"
 matplotlib = "^3.7.1"
+torch = "^2.0.0"
+torchvision = "^0.15.1"
 
 
 [tool.poetry.group.dev.dependencies]
