--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ nltk = "^3.8.1"
 matplotlib = "^3.7.1"
 torch = "^2.0.0"
 torchvision = "^0.15.1"
+scikit-learn = "^1.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
