--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ matplotlib = "^3.7.1"
 torch = "^2.0.0"
 torchvision = "^0.15.1"
 scikit-learn = "^1.2.2"
+transformers = "^4.27.4"
 
 
 [tool.poetry.group.dev.dependencies]
